Fix overlapping buttons in loans page

--- a/static/css/components/borrowTable.less
+++ b/static/css/components/borrowTable.less
@@ -12,6 +12,7 @@
 #borrowTable {
   table {
     td {
+      margin-top: 30ox;
       border-bottom: 1px solid @beige-three;
       vertical-align: top;
 
